styles/main.css
      /* * * * * * */
      /* variables */
      /* * * * * * */

:root {
  --color-main: #000;
  --color-bg: #dfdfdf;
  --color-highlight: #fff;
  --spacing-xs: 10px;
  --spacing-s: 20px;
  --spacing-m: 30px;
  --spacing-l: 60px;
  --spacing-xl: 100px;
  --header-height: 40px;
}

html {
  position: relative;
  font-family: 'Noto Sans', sans-serif;
  font-size: 10px;
  color: var(--color-main);
  background: var(--color-bg);
  -webkit-text-size-adjust: 100%;
}

/* reset */
body, h1, h2, h3, p, blockquote, ul, li, a {
  margin: 0;
  padding: 0;
  font-size: 2rem;
  line-height: 3.4rem;
  font-weight: 400;
}

a {
  color: #9d14b5;
  text-decoration: none;
}

      /* * * * * */
      /* layout  */
      /* * * * * */

body {
  display: flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  padding: var(--spacing-s);
  min-height: 100vh;
}

header {
  display: flex;
  justify-content: space-between;
  position: absolute;
  top: 18px;
  left: 20px;
  width: calc(100% - 40px);
}

main {
  margin: calc(var(--header-height) + var(--spacing-xl)) 0;
  width: 100%;
  max-width: 1370px;
}
.main--home {
  display: inline-flex;
  align-items: flex-end;
}
.main--center {
  text-align: center;
}

.column--image {
  float: left;
  width: 350px;
}
.column--text {
  float: right;
  width: calc(100% - 400px);
}

      /* * * * * * * */
      /* typography  */
      /* * * * * * * */

h1 {
  display: inline-block;
  border-bottom: 3px solid;
  font-weight: 700;
}
h1 a {
  font-weight: 700;
  color: inherit;
}
h1 a:not(.nav-item-link):hover {
  background-color: var(--color-bg);
}

span {
  display: inline-block;
}
strong {
  font-weight: 700;
}
strong span {
  margin: 0 3px 0 5px;
  color: var(--color-highlight);
}

p:not(:last-child) {
  margin-bottom: var(--spacing-m);
}
p.nav-toggle:not(:last-child) {
  margin-bottom: 0;
}

.main--home p {
  border-left: 3px solid var(--color-highlight);
  padding-left: var(--spacing-s);
}

a:not(.nav-item-link) {
  margin: 0 -3px;
  padding: 0 3px;
  transition: background-color .2s;
}
h1 a:not(.nav-item-link) {
  margin: 0;
  padding: 0;
}
em a:not(.nav-item-link) {
  padding-right: 0 6px 0 3px;
  margin-left: -2px;
}
a:not(.nav-item-link):hover {
  background-color: var(--color-highlight);
}

.caption {
  margin-top: var(--spacing-xs);
  max-width: 350px;
}
.caption, .caption a {
  font-size: 1.5rem;
  font-style: italic;
}


      /* * * */
      /* nav */
      /* * * */

nav {
  display: inline-block;
}

.nav-item {
  display: inline-block;
  margin-left: var(--spacing-s);
  list-style-type: none;
}
.nav-item:last-child {
  margin-right: var(--spacing-xs);
}

.nav-item-link {
  display: inline-block;
  border-bottom: 3px solid var(--color-bg);
  color: inherit;
  transition: border-bottom .2s;
}
.nav-item-link:hover,
.nav-item-link--current {
  border-bottom: 3px solid var(--color-highlight);
}

.nav-toggle {
  display: none;
  text-align: right;
  font-size: 1.5rem;
}
.nav-toggle:before {
  content: "(";
  margin-right: 1px;
}
.nav-toggle:after {
  content: ")";
  margin-left: 1px;
}

      /* * * * * */
      /* images  */
      /* * * * * */

img {
  margin-right: var(--spacing-m);
  max-width: 350px;
}

      /* * * * * * * * * */
      /* responsiveness  */
      /* * * * * * * * * */

@media (max-width: 1000px) {
  html {
    font-size: 9px;
  }
  h1, blockquote, .nav-item-link {
    border-width: 2px;
  }
  .nav-item-link:hover,
  .nav-item-link--current {
    border-bottom: 2px solid var(--color-highlight);
  }
  img {
    max-width: 250px;
  }
  .column--image {
    width: 250px;
  }
  .column--text {
    width: calc(100% - 300px);
  }
}

@media (max-width: 700px) {
  body, header, main, .main--home {
    display: block;
  }
  header {
    position: relative;
    top: 0;
    left: 0;
    width: 100%;
  }
  main {
    margin: calc(var(--header-height) + var(--spacing-xs)) 0;
  }
  .column--image,
  .column--text {
    float: none;
    width: 100%;
  }
  .column--image {
    margin-bottom: var(--spacing-m);
  }
  p:not(.nav-toggle):not(.caption) {
    margin-top: var(--spacing-l);
  }
  img {
    margin-right: 0;
    max-width: 100%;
  }
  .main--home p {
    margin-top: var(--spacing-m);
    margin-left: 0;
    border-left: 0;
    padding: 0;
  }
  .main--home p:before {
    display: block;
    content: " ";
    margin-bottom: var(--spacing-s);
    width: 15%;
    border-top: 2px solid var(--color-highlight);
  }
  /* nav */
  h1 {
    margin-bottom: var(--spacing-s);
  }
  nav {
    display: flex;
    flex-direction: column;
    text-align: right;
  }
  .nav-item {
    display: none;
    margin: var(--spacing-xs) 0 0 0;
  }
  .nav-item:not(.nav-item--current) {
    order: -1;
  }
  .nav-item.nav-item--current {
    margin-top: var(--spacing-m);
    text-align: center;
  }
  .nav-item:last-child {
    margin-right: 0;
  }
  .nav-item-link:not(.nav-item-link--current) {
    font-size: 1.5rem;
  }
  .nav-toggle,
  .nav-item.nav-item--current,
  .nav--active .nav-item {
    display: block;
  }
}

/* latin-ext */
@font-face {
  font-family: 'Noto Sans';
  font-style: italic;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/notosans/v11/o-0OIpQlx3QUlC5A4PNr4ARMQ_mu72BiBLE.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Noto Sans';
  font-style: italic;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/notosans/v11/o-0OIpQlx3QUlC5A4PNr4ARCQ_mu72Bi.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
/* latin-ext */
@font-face {
  font-family: 'Noto Sans';
  font-style: italic;
  font-weight: 700;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/notosans/v11/o-0TIpQlx3QUlC5A4PNr4Az5ZuyNzW1IPriezag.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Noto Sans';
  font-style: italic;
  font-weight: 700;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/notosans/v11/o-0TIpQlx3QUlC5A4PNr4Az5ZuyDzW1IPrie.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
/* latin-ext */
@font-face {
  font-family: 'Noto Sans';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/notosans/v11/o-0IIpQlx3QUlC5A4PNr6zRASf6M7VBj.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Noto Sans';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/notosans/v11/o-0IIpQlx3QUlC5A4PNr5TRASf6M7Q.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
/* latin-ext */
@font-face {
  font-family: 'Noto Sans';
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/notosans/v11/o-0NIpQlx3QUlC5A4PNjXhFVatyBx2pqPIif.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Noto Sans';
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/notosans/v11/o-0NIpQlx3QUlC5A4PNjXhFVZNyBx2pqPA.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

